--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat App</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <!-- <link rel="stylesheet" href="/src/style.css"> -->
 
 </head>
 
@@ -20,11 +20,10 @@
       <p class="answer-text">Ask a question...</p>
     </div>
     <button class="shake-button" onclick="shakeMagic8Ball()">Тисні</button>
+    
   </div>
 
 
-  <!-- <script src="src/index.js"></script>
-  <script src="/dist/bundle.js"></script> -->
 </body>
 
 </html>
